--- a/index.html
+++ b/index.html
@@ -105,48 +105,43 @@
           <!-- webモーダルウィンドウ -->
           <div id="modal__web--farmhouse" class="modal-content">
             <!-- ファムデリ　モーダル開始 -->
+            <div class="web__modal--body">
             <div class="web__description">
               <h1>farmhouse:delivery</h1>
               <p>農家直送の野菜通販サイト</p>
-              <!-- <p>架空の通販サイト。授業課題。</p> -->
             </div>
             <ul>
               <li><img class="modal__img" src="assets/images/web/farmhouse_v1.jpg"></a></li>
               <li><img class="modal__img" src="assets/images/web/farmhouse_v2.jpg"></li>
             </ul>
-            <div  class="web__back">
-              <a id="modal-close">
-                <img src="assets/images/back.png">
-                <p>BACK</p></a>
-              </div>
+          </div>
+          <a id="modal-close"><img src="assets/images/back.png"></a>
             <!-- モーダルウィンドウ終了 -->
           </div>
           <!-- ファムデリ終了 -->
 
           <div id="modal__web--docomo" class="modal-content">
             <!-- ドコモ　モーダル開始 -->
+            <div class="web__modal--body">
             <div class="web__description">
               <h1>DOCOMO</h1>
               <p>商品紹介ページのリデザイン</p>
               <!-- <p class="modal__explanation">授業課題。自分の使っているキャリアの新作モデル。</p> -->
             </div>
-
             <ul>
               <li><img class="modal__img--v2" src="assets/images/web/docomo_v1.jpg"></li>
               <li><img class="modal__img--v2" src="assets/images/web/docomo_v4.jpg"></li>
               <li><img class="modal__img--v2" src="assets/images/web/docomo_v3.jpg"></li>
             </ul>
-            <div  class="web__back">
-              <a id="modal-close">
-                <img src="assets/images/back.png">
-                BACK</a>
-              </div>
+          </div>
+              <a id="modal-close"><img src="assets/images/back.png"></a>
             <!-- モーダルウィンドウ終了 -->
           </div>
           <!-- ドコモ終了 -->
 
           <div id="modal__web--nail-salon" class="modal-content">
             <!-- ネイルサロン　モーダル開始 -->
+            <div class="web__modal--body">
             <div class="web__description">
               <h1>Ailas</h1>
               <p>ネイルサロンのWEBサイト制作</p>
@@ -157,28 +152,25 @@
               <li><img class="modal__img--v2" src="assets/images/web/nail-salon_pc_v1.jpg"></li>
               <li><img class="modal__img--small" src="assets/images/web/nail-salon_sp.jpg"></li>
             </ul>
-            <div  class="web__back">
-              <a id="modal-close">
-                <img src="assets/images/back.png">
-                BACK</a>
-              </div>
+          </div>
+              <a id="modal-close"><img src="assets/images/back.png"></a>
             <!-- モーダルウィンドウ終了 -->
           </div>
           <!-- ネイルサロン終了 -->
 
-          <div id="modal__web--uds" class="modal-content hide">
+          <div id="modal__web--uds" class="modal-content">
             <!-- USD　モーダル開始 -->
+            <div class="web__modal--body">
             <div class="web__description">
               <h1>UNDESIGN STUDIO</h1>
               <p>企業のWEBサイトのリデザイン</p>
               <!-- <p class="modal__explanation">授業課題。担当講師の経営する会社のWEBサイトをリデザインしたもの。</p> -->
             </div>
-              <img class="modal__img usd" src="assets/images/web/UDS.jpg">
-            <div  class="web__back">
-              <a id="modal-close">
-                <img src="assets/images/back.png">
-                BACK</a>
-              </div>
+            <ul>
+              <li><img class="modal__img" src="assets/images/web/UDS.jpg"><li>
+              </ul>
+            </div>
+              <a id="modal-close"><img src="assets/images/back.png"></a>
             <!-- モーダルウィンドウ終了 -->
           </div>
           <!-- uds 終了 -->
