ポートフォリオサイト

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
     <!-- フッター・コピーライト -->
       <div class="footer">
-        <h1 class="yu-gothic">Thank you for visiting my website.</h1>
+        <h1 class="yu-gothic">Thank you for visiting my portfolio site.</h1>
         <p class="copyright font-size__min letter-space__medium">Copyright &copy; 2017 AYAMI TAKAHASHI All Rights Reserved.</p>
       </div>
       <!--  -->
