--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="assets/css/top.css">
     <link rel="stylesheet" href="assets/css/font.css">
     <link rel="stylesheet" href="assets/css/link-effects.css">
-    <link rel="stylesheet" href="assets/css/web__modal-window.css">
     <link rel="stylesheet" href="assets/css/ad__modal-window.css">
     <link rel="stylesheet" href="assets/css/other__modal-window.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
@@ -63,6 +62,7 @@
 
       <!-- webデザイン -->
         <div id="web" class="web">
+          <a name="web__back"></a>
           <ul class="web__contents">
             <li>
               <figure class="snip1353">
@@ -70,7 +70,7 @@
                 <figcaption>
                   <h2>farmhouse:derivery</h2>
                 </figcaption>
-              <a class="modal-syncer button-link" data-target="modal__web--farmhouse"></a>
+              <a href="farmhouse.html"></a>
               </figure>
             </li>
             <li>
@@ -79,7 +79,7 @@
                 <figcaption>
                 <h2>docomo</h2>
               </figcaption>
-              <a class="modal-syncer button-link" data-target="modal__web--docomo"></a>
+              <a href="docomo.html"></a>
             </figure>
             </li>
             <li>
@@ -88,7 +88,7 @@
                 <figcaption>
                 <h2>Ailas</h2>
               </figcaption>
-              <a class="modal-syncer button-link" data-target="modal__web--nail-salon"></a>
+              <a href="nail-salon.html"></a>
             </figure>
             </li>
             <li>
@@ -97,86 +97,11 @@
                 <figcaption>
                 <h2>UNDESIGN STUDIO</h2>
               </figcaption>
-              <a class="modal-syncer button-link" data-target="modal__web--uds"></a>
+              <a href="uds.html"></a>
             </figure>
             </li>
           </ul>
-
-          <!-- webモーダルウィンドウ -->
-          <div id="modal__web--farmhouse" class="modal-content">
-            <!-- ファムデリ　モーダル開始 -->
-            <div class="web__modal--body">
-            <div class="web__description">
-              <h1>farmhouse:delivery</h1>
-              <p>農家直送の野菜通販サイト</p>
-            </div>
-            <ul>
-              <li><img class="modal__img" src="assets/images/web/farmhouse_v1.jpg"></a></li>
-              <li><img class="modal__img" src="assets/images/web/farmhouse_v2.jpg"></li>
-            </ul>
-          </div>
-          <a id="modal-close"><img src="assets/images/back.png"></a>
-            <!-- モーダルウィンドウ終了 -->
-          </div>
-          <!-- ファムデリ終了 -->
-
-          <div id="modal__web--docomo" class="modal-content">
-            <!-- ドコモ　モーダル開始 -->
-            <div class="web__modal--body">
-            <div class="web__description">
-              <h1>DOCOMO</h1>
-              <p>商品紹介ページのリデザイン</p>
-              <!-- <p class="modal__explanation">授業課題。自分の使っているキャリアの新作モデル。</p> -->
-            </div>
-            <ul>
-              <li><img class="modal__img--v2" src="assets/images/web/docomo_v1.jpg"></li>
-              <li><img class="modal__img--v2" src="assets/images/web/docomo_v4.jpg"></li>
-              <li><img class="modal__img--v2" src="assets/images/web/docomo_v3.jpg"></li>
-            </ul>
-          </div>
-              <a id="modal-close"><img src="assets/images/back.png"></a>
-            <!-- モーダルウィンドウ終了 -->
-          </div>
-          <!-- ドコモ終了 -->
-
-          <div id="modal__web--nail-salon" class="modal-content">
-            <!-- ネイルサロン　モーダル開始 -->
-            <div class="web__modal--body">
-            <div class="web__description">
-              <h1>Ailas</h1>
-              <p>ネイルサロンのWEBサイト制作</p>
-              <!-- <p class="modal__explanation">授業課題。市場やネイル業界の事情について調べ、プレゼンする授業。</p> -->
-            </div>
-            <ul>
-              <li><img class="modal__img--v2" src="assets/images/web/nail-salon_pc_v2.jpg"></li>
-              <li><img class="modal__img--v2" src="assets/images/web/nail-salon_pc_v1.jpg"></li>
-              <li><img class="modal__img--small" src="assets/images/web/nail-salon_sp.jpg"></li>
-            </ul>
-          </div>
-              <a id="modal-close"><img src="assets/images/back.png"></a>
-            <!-- モーダルウィンドウ終了 -->
-          </div>
-          <!-- ネイルサロン終了 -->
-
-          <div id="modal__web--uds" class="modal-content">
-            <!-- USD　モーダル開始 -->
-            <div class="web__modal--body">
-            <div class="web__description">
-              <h1>UNDESIGN STUDIO</h1>
-              <p>企業のWEBサイトのリデザイン</p>
-              <!-- <p class="modal__explanation">授業課題。担当講師の経営する会社のWEBサイトをリデザインしたもの。</p> -->
-            </div>
-            <ul>
-              <li><img class="modal__img" src="assets/images/web/UDS.jpg"><li>
-              </ul>
-            </div>
-              <a id="modal-close"><img src="assets/images/back.png"></a>
-            <!-- モーダルウィンドウ終了 -->
-          </div>
-          <!-- uds 終了 -->
         </div>
-        <!-- web終了 -->
-
 
         <!-- 広告デザイン -->
         <div id="ad" class="ad">
@@ -185,16 +110,25 @@
                     <div class="ad__modal-content">
                       <div class="ad__description">
                         <h1>Galaxy Active Neo</h1>
-                        <p>スマホ新作モデルの雑誌広告</p>
-                        <!-- <p>Galaxyの新作</p> -->
+                        <h2>スマホ新作モデルの雑誌広告</h2>
+                        <ul class="">
+                          <li><p>授業課題</p></li>
+                          <li><p>使用ソフト：Illustrator</p></li>
+                        </ul>
+                        <p>Galaxy Avtive Neoの強さを表現するために</p>
+                        <p>力強く躍動感のある</p>
+
                       </div>
                       <div class="ad__images">
                         <img class="ad__img" src="assets/images/ad/galaxy.jpg">
-                        <img class="ad__mockup" src="assets/images/ad/galaxy_magazin.png">
+                        <figure class="mockup">
+                          <figcaption>雑誌掲載イメージ</figcaption>
+                          <img class="ad__mockup" src="assets/images/ad/galaxy_magazin.png">
+                      </figure>
                       </div>
                     </div>
                     <div data-closemodal="ModalWindow__galaxy" class="close_modal">
-                      <a><img src="assets/images/back.png"></a>
+                        <a><img src="assets/images/back.png"></a>
                       </div>
                 </div>
             </div>
@@ -230,7 +164,7 @@
       </div>
         <!--開くボタン-->
         <li class="open__layout">
-          <div  class="open__modal docomo__layout" data-openmodal="ModalWindow__matcha-stic">
+          <div class="open__modal docomo__layout" data-openmodal="ModalWindow__matcha-stic">
             <figure class="snip1353">
               <img src="assets/images/ad/matcha-stic_thumbnail.jpg">
               <figcaption>
@@ -279,7 +213,13 @@
               <div class="ad__modal-content">
                 <div class="ad__description">
                 <h1>加茂水族館</h1>
-                <p>PR駅貼りポスター</p>
+                <h2>駅貼りポスター</h2>
+                <p>加茂水族館を多くの人に知ってもらいたく、</p>
+                <p>東京の駅構内に掲載するポスターを制作しました。</p>
+                <p>クラゲがメインの水族館ということをアピールするために、</p>
+                <p>クラゲを全面に出したデザインにしました。</p>
+
+
               </div>
               <div class="ad__images--v2">
                 <ul>
@@ -351,14 +291,6 @@
               </figure>
               </li>
           </ul>
-
-          <!-- モーダルウィンドウ -->
-          <div id="modal__photograph" class="modal-content hide">
-            <!-- モーダルウィンドウのコンテンツ開始 -->
-            <img class="modal__img" src="assets/images/photo/cherryblossams.jpg">
-            <p><a id="modal-close" class="close__position--svg button-link font-size__min">BACK</a></p>
-            <!-- モーダルウィンドウのコンテンツ終了 -->
-          </div>
         </div>
 
         <!-- そのほか -->
@@ -416,11 +348,19 @@
                   <div class="other__description">
                     <h1>ブランディング</h1>
                     <h2>Clip de Trip</h2>
-                    <p class="font-size__normal">「クリップの多機能性を広め、生活の中に取り入れてもらう。」をコンセプトに女性をターゲットにした文具雑貨のお店を企画。</p>
+                    <p class="font-size__normal">
+                      「クリップの多機能性を広め、生活の中に取り入れてもらう。」をコンセプトに女性をターゲットにした文具雑貨のお店を企画。
+
+                    </p>
                   </div>
                   <div class="branding__img">
                     <img class="clipdetrip-logo" src="assets/images/other/clipdetrip_logo.svg">
+                    <figure id="shop-bag">
+                      <figcaption>ショップバッグイメージ</figcaption>
                     <img class="ct__sb--img" src="assets/images/other/clipdetlip_shopbag.svg" alt="ショップバッグ">
+                  </figure>
+                  <figure id="logo-idea">
+                    <figcaption>ロゴ案</figcaption>
                     <img class="logo__idea--img" src="assets/images/other/clipdetrip__logo.jpg" alt="ショップバッグ">
 
                   </div>
@@ -448,18 +388,24 @@
       <div class="prof__contents">
         <div class="about-me">
         <h1 class="letter-space__medium">高橋 絢美</h1>
-        <p class="font-saize__middle--small">埼玉県生まれ埼玉県育ち。血液型は不明。東京デザイナー学院を卒業。幼い頃から、絵を描いたりものを作ることが好きで、
+        <p class="font-saize__middle--small">埼玉生まれ埼玉育ち。東京デザイナー学院を卒業。幼い頃から、絵を描いたりものを作ることが好きで、
           自分の好きなことで誰かの役に立ちたいと言う思いからデザイナーを志望。
           グラフィックデザインを専攻していたが、プログラミングに興味があったことからWEBデザインへ移行。
-          結婚のため、東京デザイナー学院を卒業と同時に鶴岡市に移住。
+          結婚のため、東京デザイナー学院を卒業と同時に鶴岡市に移住。</p>
+          <h4>スキル</h4>
+          <ul class="skill">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Ps</li>
+            <li>Ai</li>
         </p>
       </div>
         <div class="career">
         <ul class="font-saize__middle--small">
-          <li>1996 埼玉県生まれ</li>
-          <li>2011 さいたま市立大宮北高校に入学</li>
-          <li>2014 東京デザイナー学院グラフィックデザイン科に入学</li>
-          <li>2017 山形県に移住</li>
+          <li class="birth">1996</li>
+          <li class="school">2011</li>
+          <li class="design">2014</li>
+          <li class="yamagata">2017</li>
         </ul>
       </div>
       </div>
@@ -481,7 +427,6 @@
         <img src="assets/images/scroll-up.png">
         <p class="scroll__txt font-size__min letter-space__medium">menu</p>
       </a>
-
       </div>
 
   </body>
