--- a/docomo.html
+++ b/docomo.html
@@ -24,7 +24,8 @@
         <ul class="">
           <li><p>使用ソフト：Photoshop</p></li>
           <li><p>制作期間：約１ヶ月</p></li>
-        </ul>        <p>既存の商品紹介ページを分析し、よりよいデザインの提案。</p>
+        </ul>
+        <p>既存の商品紹介ページを分析し、よりよいデザインの提案。</p>
         <p>商品のコンセプトや強みを引き出せるように制作。</p>
       </div>
 
