--- a/farmhouse.html
+++ b/farmhouse.html
@@ -26,7 +26,7 @@
         </ul>
         <p>主婦層をターゲットにし、それに合ったレイアウトやUIを考え、</p>
           <p>利用者の求める情報がわかりやすく、
-          企業側の伝えたいことが消費者に伝わるようなデザインを意識して制作しました。</p>
+          企業側の伝えたいことが消費者に伝わるようなデザインを意識して制作。</p>
       </div>
 
       <div id="ModalWindow__farmhouse--v1" class="modalwindow">
