--- a/index.html
+++ b/index.html
@@ -110,21 +110,18 @@
                     <div class="ad__modal-content">
                       <div class="ad__description">
                         <h1>Galaxy Active Neo</h1>
-                        <h2>スマホ新作モデルの雑誌広告</h2>
+                        <!-- <h2>スマホ新作モデルの雑誌広告</h2> -->
                         <ul class="">
                           <li><p>授業課題</p></li>
+                          <li><p>雑誌広告</p></li>
                           <li><p>使用ソフト：Illustrator</p></li>
                         </ul>
                         <p>Galaxy Avtive Neoの強さを表現するために</p>
-                        <p>力強く躍動感のある</p>
-
+                        <p>力強く躍動感のある写真を使用。</p>
                       </div>
                       <div class="ad__images">
                         <img class="ad__img" src="assets/images/ad/galaxy.jpg">
-                        <figure class="mockup">
-                          <figcaption>雑誌掲載イメージ</figcaption>
                           <img class="ad__mockup" src="assets/images/ad/galaxy_magazin.png">
-                      </figure>
                       </div>
                     </div>
                     <div data-closemodal="ModalWindow__galaxy" class="close_modal">
@@ -150,7 +147,15 @@
               <div class="ad__modal-content">
                 <div class="ad__description">
                   <h1>抹茶チーズスティック</h1>
-                  <p>好きなお菓子のシリーズ新作の雑誌広告</p>
+                  <ul class="">
+                    <li><p>授業課題</p></li>
+                    <li><p>雑誌広告</p></li>
+                    <li><p>使用ソフト：Illustrator</p></li>
+                  </ul>
+                  <p>自分の好きなお菓子シリーズの新作を企画し、その雑誌広告を制作する課題。</p>
+                  <p>チーズスティックの抹茶チーズを提案。</p>
+
+
                 </div>
                 <div class="ad__images">
                   <img class="ad__img" src="assets/images/ad/matcha-stic.jpg">
@@ -180,7 +185,15 @@
                 <div class="ad__modal-content">
                   <div class="ad__description">
                     <h1>角川書店</h1>
-                    <p>新聞広告のデザイン</p>
+                    <ul class="">
+                      <li><p>授業課題</p></li>
+                      <li><p>新聞広告</p></li>
+                      <li><p>使用ソフト：Illustrator</p></li>
+                    </ul>
+                    <p>「学生時代に本を読もう」をコンセプトに</p>
+                    <p>母校の写真を使用し制作。</p>
+
+
                   </div>
                   <div class="ad__images--v2">
                     <ul>
@@ -215,9 +228,7 @@
                 <h1>加茂水族館</h1>
                 <h2>駅貼りポスター</h2>
                 <p>加茂水族館を多くの人に知ってもらいたく、</p>
-                <p>東京の駅構内に掲載するポスターを制作しました。</p>
-                <p>クラゲがメインの水族館ということをアピールするために、</p>
-                <p>クラゲを全面に出したデザインにしました。</p>
+                <p>東京の駅構内に掲載するポスターを制作。</p>
 
 
               </div>
@@ -323,6 +334,7 @@
                   <div class="other__description">
                     <h1>バンドロゴデザイン</h1>
                     <h2>the Alchemist</h2>
+          
                   </div>
                   <div class="band-logo__img">
                     <img class="band-logo" src="assets/images/other/theAlchemist_logo.svg">
