--- a/uds.html
+++ b/uds.html
@@ -22,6 +22,11 @@
       <div class="uds__description">
         <h1>UNDESIGN STUDIO</h1>
         <h2>企業サイトのリデザイン</h2>
+        <ul class="">
+          <li><p>授業課題</p></li>
+          <li><p>制作期間：約2週間</p></li>
+          <li><p>使用ソフト：Photoshop</p></li>
+        </ul>
         <p>WEBデザインを習い始めてから最初の制作物。</p>
       </div>
 
