--- a/index.html
+++ b/index.html
@@ -226,7 +226,11 @@
               <div class="ad__modal-content">
                 <div class="ad__description">
                 <h1>加茂水族館</h1>
-                <h2>駅貼りポスター</h2>
+                <ul class="">
+                  <li><p>授業課題</p></li>
+                  <li><p>雑誌広告</p></li>
+                  <li><p>使用ソフト：Illustrator</p></li>
+                </ul>
                 <p>加茂水族館を多くの人に知ってもらいたく、</p>
                 <p>東京の駅構内に掲載するポスターを制作。</p>
 
